# baxter_cube

./: CMakeLists.txt  package.xml
launch/: demo.launch
src/: right_camera.cpp  state_machine.cpp
