<?xml version="1.0"?>
<package>
  <name>baxter_demo_museum</name>
  <version>0.0.0</version>
  <description>The baxter_demo_museum package</description>

  <maintainer email="joselpart@hotmail.com">Jose Part</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/baxter_demo</url> -->

  <author email="joselpart@hotmail.com">Jose Part</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <!--build_depend>baxter_interface</build_depend>
  <build_depend>baxter_description</build_depend-->
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!--build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend-->
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>visp_bridge</build_depend>
  <!--build_depend>moveit_core</build_depend-->
  <build_depend>moveit_ros_planning</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
