<?xml version="1.0"?>
<package>
  <name>baxter_cube</name>
  <version>0.0.1</version>
  <description>The baxter_cube package</description>
  <maintainer email="nantas.nardelli@gmail.com">Nantas Nardelli</maintainer>
  <license>MIT</license>
  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/baxter_demo</url> -->
  <author email="nantas.nardelli@gmail.com">Nantas Nardelli</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <!--build_depend>baxter_interface</build_depend>
  <build_depend>baxter_description</build_depend-->
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!--build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend-->
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>visp_bridge</build_depend>
  <!--build_depend>moveit_core</build_depend-->
  <build_depend>moveit_ros_planning</build_depend>
  <!-- <build_depend>moveit_ros_planning_interface</build_depend> -->
  <build_depend>tf</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
